--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   introduction_screen: ^3.1.1
   hexcolor: ^2.0.7
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
