--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.0
   introduction_screen: ^3.1.1
-  hexcolor: ^2.0.7
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
