--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^1.0.0
   introduction_screen: ^3.1.1
   hexcolor: ^2.0.7
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
